--- a/python-script-app/Dockerfile
+++ b/python-script-app/Dockerfile
@@ -1,6 +1,8 @@
 FROM python:3.10.8
-
+# /home/user
 WORKDIR /scripts
+# cd /scripts
+# /scripts
 
 RUN set -x \
      && apt-get -y update \
@@ -9,5 +11,7 @@ RUN set -x \
      && pip install youtube_dl
 
 COPY . .
+# cp . .
 
+#CMD [ "python3", "script.py" ]
 ENTRYPOINT ["python3", "script.py"]
